package edu.hitsz.props;

/**
 * @Author Doby
 *
 * HealingPackage class
 * when the hero touches it, it will recover 50 HP
 */
public class HealingPackage extends AbstractProps {
    public HealingPackage(int locationX, int locationY, int speedX, int speedY){
        super(locationX, locationY, speedX, speedY);
    }
}
